# akai-agent

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  webhook.yml
Formula/: akai-agent.rb
src/: auth.rs  build.rs  candle_llama.rs  candle_server.rs  candle_worker.rs  cli.rs  config.rs  gpu.rs  hub_worker.rs  inbound.rs  main.rs  petals.rs  petals_health.py  pipeline_worker.py  protocol.rs  queue_client.rs  rpc.rs  rpc_client.rs  tunnel.rs  types.rs  worker.rs
src/service/: launchd.rs  mod.rs  systemd.rs  windows.rs
src/wireguard/: linux.rs  macos.rs  mod.rs  windows.rs
