[package]
name = "akai-agent"
version = "0.0.37"
edition = "2021"
description = "Remote GPU worker agent for the akai-net distributed inference system"
license = "MIT"
repository = "https://github.com/Akinus21/akai-agent"

[[bin]]
name = "akai-agent"
path = "src/main.rs"

[dependencies]
tokio              = { version = "1", features = ["full"] }
clap               = { version = "4", features = ["derive"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
reqwest            = { version = "0.12", features = ["json", "stream"] }
toml               = "0.8"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs               = "5"
sysinfo            = "0.30"
hostname           = "0.3"
libc               = "0.2"
zip                = "0.6"
flate2             = "1.0"
tar                = "0.4"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true