[package]
name = "akai-agent"
version = "0.0.110"
edition = "2021"
description = "Remote GPU worker agent for the akai-net distributed inference system"
license = "MIT"
repository = "https://github.com/Akinus21/akai-agent"

[[bin]]
name = "akai-agent"
path = "src/main.rs"

[dependencies]
tokio              = { version = "1", features = ["full"] }
clap               = { version = "4", features = ["derive"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
reqwest            = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
toml               = "0.8"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs               = "5"
sysinfo            = "0.30"
hostname           = "0.3"
zip                = "0.6"
flate2             = "1.0"
tar                = "0.4"
ed25519-dalek      = { version = "2", features = ["rand_core"] }
rand               = "0.8"
base64             = "0.22"
futures-util       = "0.3"
tokio-rustls       = "0.26"
rustls             = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

rustls-pemfile     = "2"
webpki-roots       = "0.26"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
